# cedar-client

./: .gitignore  Cargo.toml
src/: gpu.rs  main.rs  nx.rs  scene.rs  shader.wgsl  state.rs  test.rs  texture.rs
src/component/: camera.rs  colour.rs  mod.rs  texture.rs  transform.rs
src/ecs/: mod.rs  world.rs
src/engine/: mod.rs  render.rs  scene.rs
src/engine/resource/: mod.rs  nx_manager.rs
src/game/login/: scene.rs
src/graphics/: button.rs  item.rs  mod.rs  renderer.rs  renderer_manager.rs  sprite.rs  texture.rs
src/graphics/shaders/: bitmap.wgsl  texture.wgsl
src/graphics/ui/: button.rs  mod.rs  text.rs  text_input.rs
src/resource/: asset_manager.rs  font.rs  input.rs  mod.rs  nx_manager.rs  window_proxy.rs
src/system/: mod.rs  ui.rs
