[package]
name = "cedar-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
downcast-rs = "1.2.1"
futures = "0.3.31"
log = "0.4.22"
nx-pkg4 = "0.1.0"
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = "0.3.19"
winit = "0.30.5"
wgpu = "23.0.1"
